# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./discounts";
 export * from "./orders";
 export * from "./customers";
 export * from "./wholesale_customers";
+export * from "./quote_whatsapps";
